// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMPSettingToggle matches snapshots 1`] = `
<div
  className="amp-setting-toggle"
>
  <div
    className="components-base-control components-toggle-control"
  >
    <div
      className="components-base-control__field"
    >
      <span
        className="components-form-toggle is-checked"
      >
        <input
          checked={true}
          className="components-form-toggle__input"
          id="inspector-toggle-control-0"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="components-form-toggle__track"
        />
        <span
          className="components-form-toggle__thumb"
        />
        <svg
          aria-hidden={true}
          className="components-form-toggle__on"
          focusable={false}
          height="6"
          role="img"
          viewBox="0 0 2 6"
          width="2"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h2v6H0z"
          />
        </svg>
      </span>
      <label
        className="components-toggle-control__label"
        htmlFor="inspector-toggle-control-0"
      >
        <div
          className="amp-setting-toggle__label-text"
        >
          <h3>
            My title
          </h3>
          <p>
            My text
          </p>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`AMPSettingToggle matches snapshots 2`] = `
<div
  className="amp-setting-toggle"
>
  <div
    className="components-base-control components-toggle-control"
  >
    <div
      className="components-base-control__field"
    >
      <span
        className="components-form-toggle"
      >
        <input
          checked={false}
          className="components-form-toggle__input"
          id="inspector-toggle-control-1"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="components-form-toggle__track"
        />
        <span
          className="components-form-toggle__thumb"
        />
        <svg
          aria-hidden={true}
          className="components-form-toggle__off"
          focusable={false}
          height="6"
          role="img"
          viewBox="0 0 6 6"
          width="6"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
          />
        </svg>
      </span>
      <label
        className="components-toggle-control__label"
        htmlFor="inspector-toggle-control-1"
      >
        <div
          className="amp-setting-toggle__label-text"
        >
          <h3>
            My title
          </h3>
        </div>
      </label>
    </div>
  </div>
</div>
`;
